--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx ts-node",  
+    "start": "npx ts-node",
     "build": "tsc"
   },
   "keywords": [],
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.7.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
   }
 }
