--- a/tsconfig.json
+++ b/tsconfig.json
@@ -107,6 +107,6 @@
     "skipLibCheck": true   ,
     "outDir": "./dist"                              /* Skip type checking all .d.ts files. */
   },
-  "include": ["src/*/.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
 }
